# infinte-ml

./: .gitignore  CMakeLists.txt  README.md  __init__.py  create_task.sh  pyproject.toml  setup.py
cmake/modules/: DetectCudaArch.cmake  SetupPybind.cmake
infinite_ml/: __init__.py  cli.py
infinite_ml/common/: CMakeLists.txt
infinite_ml/common/binding_utils/: common_bindings.cpp
infinite_ml/common/cuda/: CMakeLists.txt  __init__.py  cuda_bindings.cpp  cuda_device_info.cu  utils.cu  utils.cuh
infinite_ml/common/cuda/logging/: logger.h
infinite_ml/common/utils/: benchmark_utils.py  test_utils.py
infinite_ml/examples/: cuda_info_demo.py
infinite_ml/tasks/: CMakeLists.txt  __init__.py
infinite_ml/tasks/task_001_addition/: README.md  __init__.py  benchmark.py  config.py  interface.py
infinite_ml/tasks/task_001_addition/cuda/: CMakeLists.txt  Makefile  __init__.py  addition.cu  addition.cuh  bindings.cpp  example.py  logger.cpp  logger.h
infinite_ml/tasks/task_001_addition/python/: hello_world.py
infinite_ml/tasks/task_001_hello_world/: README.md  __init__.py  config.py  interface.py  numpy.py  pytorch.py
infinite_ml/tasks/task_001_hello_world/cuda/: CMakeLists.txt  __init__.py  a.out  bindings.cpp  hello_world.cu  hello_world.cuh
infinite_ml/tasks/task_001_hello_world/python/: hello_world.py
infinite_ml/tools/: task_generator.py
